--- a/views/MenuBarCustomer.ejs
+++ b/views/MenuBarCustomer.ejs
@@ -10,7 +10,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark container-fluid " style="background-color:  rgba(43, 59, 43, 0.796);">
   <div class="container px-5">
     <div class="container-fluid d-flex">
-      
+     
+<style>
+  body{
+      font-family: Poppins;
+  }
+</style> 
       <small class="text text-light" > <span class="navbar-brand" style="font-size: 50px;" href="#!">Book My Trip </span> Navigate Luxury, Book with Ease.</small>
     </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -23,7 +28,7 @@
                        
                         <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light  bi bi-house-up-fill w-100 h-100" href="/authenticate/custLogin">HOME </a>
                         <a id="idloggedusermenubar" type="button" onclick="logout()" value="<%=user.firstName%>" class="p-1 btn text-light   bi bi-power w-100 h-100" href="#">LOGOUT</a>
-                        <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light bi bi-person-square w-100 h-100" href="/custom/loadHomepage">PROFILE </a>
+                        <a id="idloggedusermenubar" type="button"  value="<%=user.firstName%>" class="p-1 btn text-light bi bi-person-square w-100 h-100" href="/custom/Home">PROFILE </a>
                         <div class="btn-group">
                           <button type="button" class="btn btn-warning dropdown-toggle col-12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <%=user.firstName%>
@@ -39,7 +44,7 @@
           
           
           <li class="nav-item"><button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#customerLogin"
-              style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link">CUSTOMER LOGIN </button> </li>        
+              style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> LOGIN </button> </li>        
           <% } %>
 
                     
